# blog-subscription-service

./: CMakeLists.txt  LICENSE  README.md  build-config.cmake  definitions.cmake  dependencies.cmake  deploy.cmake  product-info.cmake  resources.cmake
CMakeModules/: CheckCXX11Features.cmake  FindCommonUnixUtilities.cmake  FindCppDB.cmake  FindCryptopp.cmake  FindGeoIP.cmake  FindGulp.cmake  FindKVM.cmake  FindMagick.cmake  FindMaxMindDB.cmake  FindMySQL.cmake  FindSQLite3.cmake  FindSodium.cmake  FindVMime.cmake  FindWt.cmake  FindXercesCpp.cmake  FindcURLpp.cmake  Findlibarchive.cmake  Findlibb64.cmake  Findlibcurl.cmake  Findlibstatgrab.cmake  Findlibzip.cmake  Findnpm.cmake  FindpgSQL.cmake  Findpqxx.cmake  build-config.cmake  ccache-finalize.cmake  ccache-initialize.cmake  default-build-type.cmake  definitions.cmake  dependencies.cmake  deploy.cmake  product-info.cmake  resources.cmake
CoreLib/: Archiver.cpp  Archiver.hpp  CDate.cpp  CDate.hpp  CMakeLists.txt  Compression.cpp  Compression.hpp  CoreLib.cpp  CoreLib.hpp  Crypto.cpp  Crypto.hpp  Database.cpp  Database.hpp  Defines.cpp  Defines.hpp  Exception.cpp  Exception.hpp  FileSystem.cpp  FileSystem.hpp  Http.cpp  Http.hpp  HttpStatus.cpp  HttpStatus.hpp  Log.cpp  Log.hpp  Mail.cpp  Mail.hpp  Random.cpp  Random.hpp  SharedObjectPool.cpp  SharedObjectPool.hpp  Stopwatch.cpp  Stopwatch.hpp  System.cpp  System.hpp  Utility.cpp  Utility.hpp  main.cpp  make_unique.cpp  make_unique.hpp
Service/: CMakeLists.txt  Captcha.cpp  Captcha.hpp  CgiEnv.cpp  CgiEnv.hpp  CgiRoot.cpp  CgiRoot.hpp  Cms.cpp  Cms.hpp  CmsChangeEmail.cpp  CmsChangeEmail.hpp  CmsChangePassword.cpp  CmsChangePassword.hpp  CmsContacts.cpp  CmsContacts.hpp  CmsDashboard.cpp  CmsDashboard.hpp  CmsNewsletter.cpp  CmsNewsletter.hpp  CmsSettings.cpp  CmsSettings.hpp  CmsSubscribers.cpp  CmsSubscribers.hpp  ContactForm.cpp  ContactForm.hpp  Div.cpp  Div.hpp  Exception.cpp  Exception.hpp  Home.cpp  Home.hpp  Page.cpp  Page.hpp  Pool.cpp  Pool.hpp  RootLogin.cpp  RootLogin.hpp  SubscribeForm.cpp  SubscribeForm.hpp  Subscription.cpp  (+8 more)
Service/i18n/: localization.xml  localization_fa.xm  localization_fa.xml
Service/resources/: app.rc  wt_config.xml
Service/resources/assets/gulp/: gulpfile.js  package.json
Service/resources/assets/gulp/stylesheets/: home-en.scss  home-fa.scss  home-ltr.scss  home-rtl.scss  home.scss  root-en.scss  root-fa.scss  root-ltr.scss  root-rtl.scss  root.scss  wf-montserrat-v6-latin-bold.css  wf-montserrat-v6-latin-regular.css  wf-montserrat-v6-latin.css  wf-open-sans-v13-latin-regular.css  wf-open-sans-v13-latin-semibold.css  wf-open-sans-v13-latin.css  wf-yekan.css
Service/resources/assets/gulp/templates/: cms-change-email-fa.wtml  cms-change-email.wtml  cms-change-password-fa.wtml  cms-change-password.wtml  cms-contacts-fa.wtml  cms-contacts.wtml  cms-dashboard-fa.wtml  cms-dashboard.wtml  cms-fa.wtml  cms-newsletter-fa.wtml  cms-newsletter.wtml  cms-settings-fa.wtml  cms-settings.wtml  cms-subscribers-fa.wtml  cms-subscribers.wtml  cms.wtml  email-cancel-subscription-fa-gdpr-compliant.wtml  email-cancel-subscription-fa.wtml  email-cancel-subscription-gdpr-compliant.wtml  email-cancel-subscription.wtml  email-confirm-subscription-fa-gdpr-compliant.wtml  email-confirm-subscription-fa.wtml  email-confirm-subscription-gdpr-compliant.wtml  email-confirm-subscription.wtml  email-newsletter-template-fa.wtml  email-newsletter-template.wtml  email-root-login-alert-fa.wtml  email-root-login-alert.wtml  email-root-password-recovery-fa.wtml  email-root-password-recovery.wtml  email-subscription-cancelled-fa-gdpr-compliant.wtml  email-subscription-cancelled-fa.wtml  email-subscription-cancelled-gdpr-compliant.wtml  email-subscription-cancelled.wtml  email-subscription-confirmed-fa-gdpr-compliant.wtml  email-subscription-confirmed-fa.wtml  email-subscription-confirmed-gdpr-compliant.wtml  email-subscription-confirmed.wtml  email-user-message-fa-gdpr-compliant.wtml  email-user-message-fa.wtml  (+22 more)
Service/resources/assets/stylesheets/: root-ltr.scss  root-rtl.scss  root.scss
Service/resources/assets/templates/: cms-change-email-fa.wtml  cms-change-email.wtml  cms-change-password-fa.wtml  cms-change-password.wtml  cms-contacts-fa.wtml  cms-contacts.wtml  cms-dashboard-fa.wtml  cms-fa.wtml  cms-newsletter-fa.wtml  cms-newsletter.wtml  cms-subscribers-fa.wtml  cms-subscribers.wtml  cms-subscribers_fa.wtml  cms.wtml  root-login.wtml  root-logout.wtml
Utils/: CMakeLists.txt  geoip-updater.cpp  spawn-fastcgi.cpp  spawn-wthttpd.cpp
include/cereal/types/: functional.hpp
